--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -15,12 +15,13 @@
           <article>
             <h1>GarliCSS 🧄 Playground</h1>
             <p>
-              Hello <code>( ´ ω ` )ノﾞ</code> thanks a lot for being interested in this project. This is
-              the playground, a site designed to be a live test of this library on the default settings.
-              Here, things like themes, grid systems, media queries, and every other feature offered must
-              be available for testing as if we were in a closed lab. This simulation is meant to start
-              with the bare minimum required to make a functional, usable, accessible, and aesthetic
-              website. But it must be as extendible as possible.
+              Hello <code>( ´ ω ` )ノﾞ</code> thanks for taking the time to check out this project.
+              Welcome to the playground, where we put this library to the test under default settings.
+              Here, you'll find a range of features, from themes and grid systems to media queries, all
+              available for testing as if we're in a controlled lab environment. The goal of this
+              simulation is to begin with the bare essentials needed for a functional, user-friendly,
+              accessible, and visually pleasing website, while also ensuring it's as flexible and
+              extensible as can be.
             </p>
           </article>
           <article>
