--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -198,15 +198,15 @@
           </p>
           <form>
             <label>
-              <span>required <em>'box'</em> input <span class="txt-error">*</span></span>
+              <span>required <em>'box'</em> input <i>*</i></span>
               <input type="text" required />
             </label>
             <label>
-              <span>required date <span class="txt-error">*</span></span>
+              <span>required date <i>*</i></span>
               <input type="date" required />
             </label>
             <label>
-              <span>required select <span class="txt-error">*</span></span>
+              <span>required select <i>*</i></span>
               <select required>
                 <option value="" disabled selected>Select your option</option>
                 <option value="1">Option 1</option>
@@ -216,19 +216,19 @@
               </select>
             </label>
             <label>
-              <span>required textarea <span class="txt-error">*</span></span>
+              <span>required textarea <i>*</i></span>
               <textarea required></textarea>
             </label>
             <label>
-              <span>disabled <em>'box'</em> input <span class="txt-error">*</span></span>
+              <span>disabled <em>'box'</em> input</span>
               <input value="value" type="text" disabled />
             </label>
             <label>
-              <span>disabled date <span class="txt-error">*</span></span>
+              <span>disabled date</span>
               <input type="date" disabled />
             </label>
             <label>
-              <span>disabled select <span class="txt-error">*</span></span>
+              <span>disabled select</span>
               <select disabled>
                 <option value="" disabled selected>Select your option</option>
                 <option value="1" selected>Option 1</option>
@@ -238,7 +238,7 @@
               </select>
             </label>
             <label>
-              <span>disabled textarea <span class="txt-error">*</span></span>
+              <span>disabled textarea</span>
               <textarea disabled>value</textarea>
             </label>
           </form>
@@ -312,9 +312,7 @@
             specific inputs, the web has truly become a dynamic playground where imagination can flourish
             and user interactions can transcend the ordinary.
           </p>
-
-          <h2>Mini components</h2>
-          <p class="txt-error">Error message example.</p>
+          <!-- <h2>Mini components</h2> -->
         </article>
       </section>
     </main>
