--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -13,7 +13,7 @@
       <header>
         <section>
           <article>
-            <h1>GarliCSS 🧄 Playground</h1>
+            <h1>GarliCSS 🧄</h1>
             <p>
               Hello <code>( ´ ω ` )ノﾞ</code> thanks for taking the time to check out this project.
               Welcome to the playground, where we put this library to the test under default settings.
@@ -23,16 +23,26 @@
               accessible, and visually pleasing website, while also ensuring it's as flexible and
               extensible as can be.
             </p>
-          </article>
-          <article>
-            <a href="#">This link will take you nowhere.</a>
+            <ul>
+              <li><a href="#css-variables">CSS variables</a></li>
+              <ul>
+                <li><a href="#color-palette">Color palette</a></li>
+                <li><a href="#typographical-modular-scale">Typographical modular scale</a></li>
+              </ul>
+              <li><a href="#interactive-elements">Interactive elements</a></li>
+              <ul>
+                <li><a href="#basic-inputs">Basic inputs</a></li>
+                <li><a href="#input-states">Input states</a></li>
+                <li><a href="#html5-types">HTML5 types</a></li>
+              </ul>
+            </ul>
           </article>
         </section>
       </header>
       <section>
         <article>
-          <h2>CSS Variables</h2>
-          <h3>Color palette</h3>
+          <h2 id="css-variables">CSS variables</h2>
+          <h3 id="color-palette">Color palette</h3>
           <p>
             While individually naming every color shade in a palette may require additional effort, the
             benefits it brings to web design are worth the investment. By analyzing and filtering colors
@@ -55,7 +65,7 @@
             inclusivity merge seamlessly to create a cohesive and captivating visual journey for users,
             regardless of their preferred mode of interaction.
           </p>
-          <h3>Typographical modular scale</h3>
+          <h3 id="typographical-modular-scale">Typographical modular scale</h3>
           <p>
             The typographical modular scale, a design principle based on harmonious proportions, imparts
             an elegant and visually structured quality to web typography. By adhering to a well-defined
@@ -80,13 +90,13 @@
           </p>
           <!-- <h3>Multiplicative sizes</h3> -->
           <!-- <div id="sizes-container"></div> -->
-          <h2>Interactive Elements</h2>
+          <h2 id="interactive-elements">Interactive Elements</h2>
           <p>
             Interactive elements on the web are like the spice of life in the digital realm - without
             them, it's a bland and tasteless experience. They inject vitality, engagement, and a sense of
             control into our online endeavors, making the web a truly dynamic and empowering space.
           </p>
-          <h3>Basic inputs</h3>
+          <h3 id="basic-inputs">Basic inputs</h3>
           <p>
             When it comes to web development, the humble quartet of basic inputs, selects, textareas, and
             buttons may appear unassuming, but their significance cannot be overstated.
@@ -191,7 +201,7 @@
             enabling us to effortlessly gather information, make choices, express ourselves, and trigger
             actions, thereby breathing life and purpose into the otherwise static web.
           </p>
-          <h3>Input states</h3>
+          <h3 id="input-states">Input states</h3>
           <p>
             The disabled and required states of interactive elements on the web deserve recognition as
             unsung heroes, quietly influencing user behavior and enhancing the user experience.
@@ -209,7 +219,6 @@
               <span>required select <i>*</i></span>
               <select required>
                 <option value="" disabled selected>Select your option</option>
-                <option value="1">Option 1</option>
                 <option value="1">Option 1</option>
                 <option value="2">Option 2</option>
                 <option value="3">Option 3</option>
@@ -249,7 +258,7 @@
             leveraging these states judiciously, web developers wield a powerful tool to guide and empower
             users on their digital journeys.
           </p>
-          <h3>HTML5 types</h3>
+          <h3 id="html5-types">HTML5 types</h3>
           <p>
             HTML5, with its arsenal of specific inputs, revolutionized web development by expanding the
             range of possibilities and enabling richer user experiences.
@@ -315,6 +324,23 @@
           <!-- <h2>Mini components</h2> -->
         </article>
       </section>
+      <footer>
+        <section>
+          <article>
+            <span>
+              Created by
+              <a href="https://github.com/CarcajadaArtificial">Oscar Alfonso Guerrero</a>
+            </span>
+            <br />
+            <span>
+              GarliCSS 🧄
+              <a href="https://raw.githubusercontent.com/CarcajadaArtificial/garlicss/main/LICENSE">
+                MIT License
+              </a>
+            </span>
+          </article>
+        </section>
+      </footer>
     </main>
     <script src="script.js"></script>
   </body>
